--- a/css/style.css
+++ b/css/style.css
@@ -101,9 +101,17 @@
 }
 
 .clk{
-    margin-top: 500px;
+    margin-top: 300px;
 }
 
 .slide{
     height: 500px;
+}
+
+.img3{
+    transition: 0.3s;
+}
+
+.img3:hover{
+    opacity: 0.8;
 }
