--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 .header1{
-    background-color: #3c9989;
+    background-color: #6d937a;
     color: white;
 }
 
@@ -88,7 +88,7 @@
     background-repeat: no-repeat;
 }
 
-.img2{
+.img2{ 
     background-image: url(../img/6226682065361947200.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -114,4 +114,8 @@
 
 .img3:hover{
     opacity: 0.8;
+}
+
+.img4{
+    margin-top: -150px;
 }
