--- a/css/style.css
+++ b/css/style.css
@@ -188,12 +188,39 @@
 
 .sp span{
     background-color: rgb(80, 61, 61);
-    padding: 8px;
-    padding-top: 20px;
+    padding: 15px;
+    padding-top: 15px;
     text-align: center;
+    color: white;
+    border-radius: 5%;
 }
 
 .sp .col p{
-    font-size: 13px;
+    font-size: 12px;
     display: inline-block;
+}
+
+.in1{
+    height: 50px;
+    border-radius: 10px;
+    border:1px solid rgb(212, 212, 212);
+}
+
+.container1{
+    max-width: 800px;
+    margin: auto;
+}
+
+textarea{
+    width: 100%;
+    height: 100px;
+    border-radius: 10px;
+    border:1px solid rgb(212, 212, 212);
+}
+
+.send{
+    height: 50px;
+    width: 200px;
+    margin-top: 20px;
+    margin-bottom: 100px;
 }
